--- a/techtalk/backend/web/pom.xml
+++ b/techtalk/backend/web/pom.xml
@@ -26,6 +26,12 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-lang-kotlin</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
     </dependencies>
 
 
