--- a/nx/betrue/package.json
+++ b/nx/betrue/package.json
@@ -27,17 +27,23 @@
   },
   "private": true,
   "dependencies": {
+    "@nrwl/devkit": "*",
+    "@nrwl/react": "*",
+    "@nrwl/web": "*",
+    "@nrwl/workspace": "*",
+    "sync-directory": "^2.2.22",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "12.5.7",
-    "@nrwl/devkit": "12.5.7",
+    "@nrwl/devkit": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.5.7",
     "@nrwl/jest": "12.5.7",
     "@nrwl/linter": "12.5.7",
     "@nrwl/node": "12.5.7",
     "@nrwl/nx-plugin": "^12.5.7",
     "@nrwl/tao": "12.5.7",
+    "@nrwl/web": "^12.8.0",
     "@nrwl/workspace": "12.5.7",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
